hphp/test/slow/php7_backported/scalar-types/explicit_weak_include_strict.php.expectf

Catchable fatal error: Argument 1 passed to takes_int() must be an instance of int, double given in %s/weak_include_strict_2.inc on line 9
